# temptabqa

./: .gitignore  explore.ipynb  head_dataset_no_em_not_temp.csv  pyproject.toml  temporal_eval.ipynb  temporal_eval.qmd  word_overlap_between_question_and_answer.ipynb
data/maindata/qapairs/head-set/: head-set_analysis.csv
data/maindata/qapairs/tail-set/: tail-set_analysis.csv
data/maindata/qapairs/train-set/: train-set_analysis.csv
models/evaluation/LLama/: checkpoint_llama2_CoT_head.csv  checkpoint_llama2_few_shot_head.csv  checkpoint_llama2_few_shot_tail.csv  checkpoint_llama2_zero_shot_head.csv  checkpoint_llama2_zero_shot_tail.csv  eval_csv.py  llama2_CoT_tail.csv  llama2_eval_own.py  llama2_few_shot_head.csv  llama2_few_shot_tail.csv  llama2_own_CoT.csv  llama2_own_CoT_modified.csv  llama2_own_few_shot_modified.csv  llama2_own_zero_shot.csv  llama2_zero_shot_head.csv  llama_2_own.csv  manually_source_venv.sh  run_all.sh  run_llama2_eval.sh  runall_backup.sh  test_hf_llama.py
models/predictions/: prediction_analysis.py
models/predictions/Llama/own/experiment_1/: README.md
models/predictions/Llama/own/experiment_2/: README.md  experiment_2_llama2_eval_own.py  llama2_few_shot_head.csv  llama2_few_shot_tail.csv  llama2_zero_shot_tail.csv
my_experiments/notebooks/: explore.ipynb  word_overlap_between_question_and_answer.ipynb
my_experiments/quarto_reports/: _quarto.yml  temporal_eval.qmd
my_experiments/reproduce/models/predictions/Llama/experiment_1/: README.md  experiment_1_llama2_eval_own.py  llama2_own_CoT.csv  llama2_own_few_shot.csv  modify_CoT_answers.ipynb
my_experiments/reproduce/models/predictions/Llama/experiment_2/: README.md  llama2_CoT_head.csv  llama2_CoT_tail.csv  (+1 more)
my_experiments/temp_error_analyis/: label_studio_interface  read_manually_labeled_data.ipynb  select_temporal_questions.ipynb  temp_head_labeling.csv  temp_head_labeling_bool_as_str.csv  temp_head_labeling_label_studio_2025-02-11-17-05-e95fdb59.json
(+6 files in other folders)
